# multiagent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  research_checkpoints.db-shm  research_checkpoints.db-wal  streamlit_app.py
app/: main.py
app/api/: __init__.py
app/api/routes/: __init__.py  research.py
app/core/: config.py
app/schemas/: __init__.py  research.py
app/services/: __init__.py  research.py
src/research_assistant/: __init__.py  graph.py  persistence.py  state.py
src/research_assistant/nodes/: __init__.py  planner.py  researcher.py  reviewer.py  writer.py
tests/: test_graph.py  test_nodes.py  test_state.py
